fix: text-overflow direct-message

--- a/src/app/components/direct-message/direct-message.component.scss
+++ b/src/app/components/direct-message/direct-message.component.scss
@@ -20,7 +20,7 @@
 
     .header-img-container {
       position: relative;
-
+      width: 100%;
       img {
         width: 50px;
         height: 50px;
@@ -43,6 +43,7 @@
       .header-username {
         font-size: 24px;
         font-weight: 700;
+        @include textOverflowMulti();
       }
 
 
@@ -87,6 +88,7 @@
       gap: 24px;
 
       .direct-m-mem-header {
+        width: 100%;
         display: flex;
         align-items: flex-end;
         gap: 20px;
@@ -110,6 +112,7 @@
           font-size: 24px;
           font-weight: 700;
           line-height: 32.74px;
+          @include textOverflowMulti();
         }
       }
 
@@ -123,6 +126,7 @@
 
         span {
           color: $purple-blue-bright;
+          word-break: break-word;
         }
       }
     }
